Changes on style, index.html and package.json

--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
   <title>Frontend Mentor | Four card feature section</title>
 
   <link rel="stylesheet" href="styles/style.css">
+  <link rel="stylesheet" href="styles/mq1.css" media="(min-width: 768px)">
 </head>
 
 <body>
@@ -35,7 +36,7 @@
         <img src="images/icon-supervisor.svg" alt="Picture of a magnifing glass">
       </div>
 
-      <div id='color1' class="cards">
+      <div class="cards">
         <h2>Team Builder</h2>
         <p>
           Scans our talent network to create the optimalteam for your project
@@ -44,7 +45,7 @@
         <img src="images/icon-team-builder.svg" alt="Picture of a house">
       </div>
 
-      <div id="color2" class="cards">
+      <div class="cards">
         <h2>Karma</h2>
         <p>
           Regularly evaluates our talent to ensure quality
@@ -53,7 +54,7 @@
         <img src="images/icon-karma.svg" alt="Picture of a light bulb on">
       </div>
 
-      <div id="color3" class="cards">
+      <div class="cards">
         <h2>Calculator</h2>
         <p>
           Uses data from past projects to provide better delivery estimates
